--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @tailwind base;
 @tailwind components;
+
 @tailwind utilities;
 
 .zoomOutOnClick:active {
@@ -7,11 +8,23 @@
 }
 a {
   color: #3718ff;
+  cursor: pointer !important;
 }
 .dark a {
   color: #2a9eff;
 }
-
-#isRightDrawerActive:checked + #right_drawer_nav {
-  transform: translateX(0);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: white;
+}
+div,
+span,
+p,
+b {
+  color: rgb(156 163 175);
+  font-size: 15px;
 }
